# solcrypt-ds

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  devbuild.sh  meow.enc  meow.txt  note.txt
server/: .env  Cargo.toml
server/prisma/: schema.prisma
server/src/: main.rs
src/: bot.rs  crypto.rs  decrypt.rs  encrypt.rs  lib.rs  main.rs  main.rs.bak
testdir/dir2/: meow2.txt  meow3.txt
